--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title></title>
 </head>
 <body>
-	<img src="111.jpg">
+	<div id="container">
+	<img id="mypic" src="111.jpg">
+	</div>
 <h1>Coming soon...Le wagon</h1>
 </body>
 </html>
